# lama-hack

./: .gitignore  GUIDE.md  README.md  embodiment.py  notes.py  pyproject.toml  run.py  sequencer.py  slides.html
rerun/: README.md  requirements.txt
rerun/scripts/: annotate_episode_v2.py  compare_takes_v2.py  create_reel.py  dump_all_tasks.py  explore_episode.py  inspect_data.py  make_blueprint_v2.py  rrd_utils.py
server/: codec.py  modal_ws.py
tests/: test_backend.py  test_codec.py  test_contract.py  test_end_to_end.py  test_fake_client.py  test_notes.py  test_sequencer.py  test_server_static.py
